--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/paypal__paypal-js": "^2.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
